2008-04-23  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Handle the situation of
	the user not having any encoders and trying to transfer an unsupported
	file type.

2008-04-23  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinDetailsDialog.cs:
	* src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinTile.cs:
	* src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinView.cs: Moved
	these widgets into their own proper namespace

	* src/Core/Banshee.ThickClient/Banshee.Preferences.Gui/DefaultPreferenceWidgets.cs:
	Changed to reflect said move

2008-04-23  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/BansheeDialog.cs:
	Allow setting the parent/transient for window

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/AddinDetailsDialog.cs:
	Added a simple details dialog for an addin

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/AddinView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/AddinTile.cs:
	Better tile UI and added enable/disable and details buttons to the tile;
	actually enable/disable addins when the button is pressed - BE WARNED
	this has not been tested too much yet

	* src/Libraries/Hyena.Gui/Hyena.Widgets/WrapLabel.cs: Added a Wrap
	property that will allow text to be ellipsized to one line if unset

	* src/Core/Banshee.ThickClient/Banshee.MediaProfiles.Gui/ProfileComboBoxConfigurable.cs:
	* src/Core/Banshee.ThickClient/Banshee.MediaProfiles.Gui/ProfileConfigurationDialog.cs:
	* src/Core/Banshee.ThickClient/Banshee.Preferences.Gui/DefaultPreferenceWidgets.cs:
	Updated to use the new WrapLabel

	* src/Libraries/Hyena.Gui/Hyena.Widgets/TextViewLabel.cs: Removed now
	that we have a proper WrapLabel
	
	* src/Backends/Banshee.GStreamer/Banshee.GStreamer.addin.xml:
	* src/Backends/Banshee.Gnome/Banshee.Gnome.addin.xml:
	* src/Backends/Banshee.Hal/Banshee.Hal.addin.xml:
	* src/Backends/Banshee.Unix/Banshee.Unix.addin.xml: