@@ -1,5 +1,10 @@
 2008-04-23  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Dap/Banshee.Dap.Mtp/Banshee.Dap.Mtp/MtpSource.cs: Be more careful
+	when Disposing.
+
+2008-04-23  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Handle the situation of
 	the user not having any encoders and trying to transfer an unsupported
 	file type.
